--- a/catalog/static/catalog/style.css
+++ b/catalog/static/catalog/style.css
@@ -1,3 +1,15 @@
+/* catalog style.css
+   version (django week2 day4)
+   with :
+   - newsroom
+   - dewey-list 
+   - publication-list 
+   - base
+*/
+
+/* newsroom
+*/
+
 .newsroom {
     /* width: 400px; */
     border: 1px solid black;
@@ -18,6 +30,83 @@
 }
 
 
+/* dewey-list 
+*/
+.dewey-list {
+    margin-left: .5rem;
+}
+
+.dewey-list h2 {
+    font-size: 1.3rem;
+}
+
+.dewey-list-group .list-group-item {
+    padding: 0px;
+}
+
+.dewey000 {
+    background-color: #000000;
+    color: #fff;
+}
+
+.dewey100 {
+    background-color: #8B4513;
+    color: #fff;
+}
+
+.dewey200 {
+    background-color: #FF0000;
+    color: #fff;
+}
+
+.dewey300 {
+    background-color: #FF4500;
+    color: #fff;
+}
+
+.dewey400 {
+    background-color: #FFFF00;
+    color: #000;
+}
+
+.dewey500 {
+    background-color: #32CD32;
+    color: #fff;
+}
+
+.dewey600 {
+    background-color: #1E90FF;
+    color: #fff;
+}
+
+.dewey700 {
+    background-color: #8B008B;
+    color: #fff;
+}
+
+.dewey800 {
+    background-color: #A9A9A9;
+    color: #fff;
+}
+
+.dewey900 {
+    background-color: #FFFFFF;
+    color: #000;
+}
+
+/* publication-list
+*/
+.publication-list {
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.publication-list h2 {
+    font-size: 1.3rem;
+}
+
+/* base 
+*/
 footer {
     padding: 1rem;
     background-color: lightblue;
